--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="/app.css" rel="stylesheet">
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-neutral-950 text-gray-100 min-h-screen">
+		<main class="p-6">
 		<div style="display: contents">%sveltekit.body%</div>
+		</main>
 	</body>
 </html>
